# customs-tracker-bot

./: .env.example  .gitignore  README.md  alembic.ini  bot.py  pre_filter.py  pyproject.toml
ai/: classifier.py  prompts.py
alembic/: env.py
alembic/versions/: 0001_initial_db_first_schema.py  0002_add_ai_retry_queue.py  0003_add_original_brief_sections.py
core/: brief_text_parser.py  config.py  constants.py  exceptions.py  log_utils.py  permissions.py  text_utils.py
db/: engine.py  models.py
db/repo/: message_repo.py  retry_repo.py  role_repo.py  settings_repo.py  task_repo.py
diagnostics/: readiness.py  startup.py
handlers/: callbacks.py  filters.py  messages.py  middleware.py  replies.py
handlers/callback_actions/: __init__.py  common.py  delete_actions.py  postpone_actions.py  task_actions.py
handlers/commands/: brief.py  info.py  roles.py  settings.py  setup.py  stats.py  tasks.py
scheduler/: runner.py
scheduler/jobs/: deadline_reminder.py  delivery_reminder.py  morning_digest.py  overdue_reminder.py  (+1 more)
scripts/: backfill_russian_text_fields.py
services/: brief_pipeline.py  postpone_service.py  role_service.py  settings_service.py  stats_service.py  task_service.py
tests/: conftest.py  fakes.py  test_alembic_migrations.py  test_bot_entrypoint.py  test_brief_command_readiness.py  test_brief_pipeline_readiness.py  test_health_command_messages.py  test_postpone_prompt_cleanup.py  test_pre_filter.py  test_reply_detection_keywords.py  test_settings_command.py
ui/: cards.py  formatters.py
web/: app.py  auth.py  context.py  deps.py  server.py
(+57 files in other folders)
