[project]
name = "customs-bot"
version = "0.2.0"
description = "Telegram bot for tracking custom content orders"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0",
    "aiosqlite",
    "sqlalchemy[asyncio]>=2.0",
    "alembic",
    "anthropic",
    "pydantic-settings",
    "structlog",
    "fastapi>=0.100",
    "jinja2>=3.1",
    "uvicorn>=0.20",
    "itsdangerous>=2.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
